Remove many compilation warning
git-svn-id: https://jcae.svn.sourceforge.net/svnroot/jcae/trunk@2256 9c4724a3-da1e-0410-bc68-88f18da35cd4